# GameNative

./: README.md  manifest.json
.github/workflows/: adhoc-signed-build.yml  app-release-signed.yml  build-on-push.yml  tagged-release.yml
app/: build.gradle.kts
app/src/legacy/assets/graphics_driver/: wrapper-gamenative.tzst
app/src/main/: AndroidManifest.xml
app/src/main/assets/: dxwrapper_download.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/asurfacerenderer/: ahbimage.c  gpuimage.c
app/src/main/cpp/evshim/: evshim.c
app/src/main/cpp/vulkan_renderer/: CMakeLists.txt
app/src/main/cpp/winlator/: VulkanRendererContext.cpp  VulkanRendererContext.h  fakeinput.cpp  vulkan_jni.cpp  window.frag  window_frag.h  window_vert.h
app/src/main/java/app/gamenative/: CrashHandler.kt  PluviaApp.kt  PrefManager.kt  SteamBootstrap.kt
app/src/main/java/app/gamenative/data/: SteamApp.kt
app/src/main/java/app/gamenative/db/: PluviaDatabase.kt
app/src/main/java/app/gamenative/events/: AndroidEvent.kt
app/src/main/java/app/gamenative/gamefixes/: GOG_1141086411.kt
app/src/main/java/app/gamenative/service/: NativeRuntimeService.kt  SteamAutoCloud.kt  SteamService.kt
app/src/main/java/app/gamenative/ui/: PluviaMain.kt
app/src/main/java/app/gamenative/utils/: ContainerUtils.kt  (+12 more)
app/src/main/res/values/: arrays.xml  strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
docs/: ROOT_BOOST_RUNTIME_PLAN.md  SMARTPHONE_BUILD_AND_NEXT_FIXES.md
gradle/: libs.versions.toml
(+60 files in other folders)
